-Fixed various warnings like null marked warnings